fixed issue with extra space under geolocator

--- a/src/components/TabbedMap/style.scss
+++ b/src/components/TabbedMap/style.scss
@@ -6,9 +6,11 @@
   justify-content: center;
 
   .map-container {
-    border: 1px solid #f0f0f0;
     display: flex;
-    height: 740px;
+    @include mq($from: tablet) {
+      border: 1px solid #f0f0f0;
+      height: 740px;
+    }
 
     @include mq($until: tablet) {
       flex-direction: column;
